test/loadbalancer-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service-local-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
